--- a/Styles/projects.css
+++ b/Styles/projects.css
@@ -1,16 +1,7 @@
-#work-projects h2 {
-   font-size: 3rem;
-   text-shadow: 0px 1px 2px var(--dark);
-}
-
 .project-git {
    color: #fff;
    margin: 0 auto;
    width: 100%;
-}
-
-.project-git h3 {
-   font-size: 2rem;
 }
 
 .project-git li {
@@ -131,8 +122,9 @@
 }
 
 .use-language {
-   border-radius: 5px;
    display: flex;
+   border-radius: 5px;
+   border: 1px dotted black;
    justify-content: space-between;
    height: 7px;
    width: 100%;
@@ -159,13 +151,13 @@
 }
 
 .languages .usable span {
-   
    height: 30px;
    color: #fff;
    text-shadow: 1px 2px 3px black;
    justify-content: center;
    padding: 5px;
    font-size: 15px;
+   border-radius: 5px;
 }
 
 @media screen and (max-width: 590px) {
