--- a/Styles/variables.css
+++ b/Styles/variables.css
@@ -1,6 +1,7 @@
 @import "menu.css";
 @import "projects.css";
 @import "frameworks.css";
+@import "works.css";
 
 :root {
     font-size: 62.5%;
@@ -45,10 +46,10 @@ body {
     grid-template-rows: 1fr;
     gap: 40px;
     max-width: 82vw;
-    grid-template-areas:
+    /* grid-template-areas:
     "top"
     "mid"
-    "bot";
+    "bot"; */
 }
 header, section, footer {
     background-color: var(--background);
@@ -57,13 +58,22 @@ header, section, footer {
     position: relative;
 }
 
-h1, h2, h3, p {
+h1, h2, h3, h4, p {
     margin: 0 auto;
     color: #000000;
 }
 
+h2 {
+    font-size: 3rem;
+    text-shadow: 0px 1px 2px var(--dark);
+    text-transform: uppercase;
+ }
+ 
+ h3 { font-size: 2.2rem; }
+ h4 { font-size: 1.95rem; }
+ 
 p {
-    font-size: 1.8rem;
+    font-size: 1.6rem;
     line-height: 1.35;
 }
 
